# rust-analyzer-issue-5040

./: Cargo.toml
crates/crate1/: Cargo.toml  build.rs
crates/crate1/src/: lib.rs
crates/crate2/: Cargo.toml
crates/crate2/src/: lib.rs
